[gd_scene load_steps=18 format=2]

[ext_resource path="res://images/character/Skeleton/Skeleton Idle.png" type="Texture" id=1]
[ext_resource path="res://images/character/Skeleton/Skeleton Hit.png" type="Texture" id=2]
[ext_resource path="res://images/character/Skeleton/Skeleton Dead.png" type="Texture" id=3]
[ext_resource path="res://Skeleton.gd" type="Script" id=4]
[ext_resource path="res://images/Effects/hp_progress_white.png" type="Texture" id=5]
[ext_resource path="res://images/Effects/hp_top.png" type="Texture" id=6]
[ext_resource path="res://images/character/Skeleton/Skeleton Walk.png" type="Texture" id=7]
[ext_resource path="res://images/character/Skeleton/Skeleton Attack.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.56525, 16 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/Attack:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}

[sub_resource type="Animation" id=3]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Dead:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ Vector2( -1, 0 ) ],
"method": "hurtMovement"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ Vector2( 1, 0 ) ],
"method": "hurtMovement"
} ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Walk"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 35.0

[sub_resource type="CircleShape2D" id=9]
radius = 150.0

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 4 )

[node name="Hurt" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8

[node name="Idle" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 4, 0 )
hframes = 11
frame = 9

[node name="Dead" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( -2, 0 )
hframes = 15

[node name="Walk" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 7 )
offset = Vector2( 3, 0 )
hframes = 13

[node name="Attack" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false
offset = Vector2( -10, -21 )
hframes = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 1.2, 0.8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Dead = SubResource( 3 )
"anims/Hurt Left" = SubResource( 4 )
"anims/Hurt Right" = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Walk = SubResource( 7 )

[node name="Hp_bar" type="TextureProgress" parent="."]
margin_left = -15.0
margin_top = -25.0
margin_right = 15.0
margin_bottom = -19.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.235294, 0.235294, 0.235294, 1 )
tint_progress = Color( 0.27451, 0.768627, 0.0509804, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hpbar timer" type="Timer" parent="Hp_bar"]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="Hp_bar"]

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 0

[node name="SkeletonBody" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, 3 )
scale = Vector2( 1, 0.8 )
shape = SubResource( 1 )

[node name="Attack" type="CollisionShape2D" parent="AttackArea"]
visible = false
position = Vector2( 0, 12 )
shape = SubResource( 8 )
disabled = true

[node name="VisionRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRange"]
shape = SubResource( 9 )

[node name="RespawnTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Attack Speed" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Hp_bar/Hpbar timer" to="." method="_on_Hpbar_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="VisionRange" to="." method="_on_VisionRange_body_entered"]
[connection signal="body_exited" from="VisionRange" to="." method="_on_VisionRange_body_exited"]
[connection signal="timeout" from="RespawnTime" to="." method="_on_RespawnTime_timeout"]
[connection signal="timeout" from="Attack Speed" to="." method="_on_Attack_Speed_timeout"]
